--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ h2{
     font-family: 'Roboto', sans-serif;
 }
 p {
-    border: 2px solid DodgerBlue; /* Добавление границы */
-    padding: 10px; /* Внутренние отступы */
-    margin: 10px 0; /* Отступы сверху и снизу */
-    background-color: rgba(255, 255, 255, 0.544); /* Цвет фона для параграфа */
+    border: 2px solid DodgerBlue; 
+    padding: 10px; 
+    margin: 10px 0; 
+    background-color: rgba(255, 255, 255, 0.544); 
 
  }
